[package]
name = "throwdown-rtmp"
version = "0.1.0"
authors = ["Damien Vesper <ldamienvesper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.4", features = ["full"] }
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
rml_rtmp = "0.4.0"
bytes = "1.0.1"
slab = "0.4.3"
time = "0.2.26"
serde = { version = "1.0.126", features = ["derive"] }
url = "2.2.2"
url_serde = "0.2.0"
serde_json = "1.0.64"
serde_derive = "1.0.126"